# bzz-procrastination

./: .gitignore  CMakeLists.txt  bitboard.hpp  bot.hpp  diag.hpp  eval.hpp  gamestate.hpp  hash.hpp  main.cpp  minmax.hpp  movegen.hpp  perf.hpp  repetition.hpp  transposition_table.hpp
